--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true">
+    android:layout_alignParentTop="true"
+    android:layout_margin="5dp">
 
     <ImageView
         android:id="@+id/ivProfileImage"
