Publishing Tweet and Adding ActionBar Item - In the middle of - 7 minutes into the video - logging off for the night

--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -1,5 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <item
+        android:id="@+id/miCompose"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:title="Compose"
+        android:visible="true"
+        app:showAsAction="ifRoom"></item>
 
 </menu>
