--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -5,6 +5,6 @@
         android:icon="@android:drawable/ic_menu_edit"
         android:title="Compose"
         android:visible="true"
-        app:showAsAction="ifRoom"></item>
+        app:showAsAction="ifRoom"/>
 
 </menu>
