--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:counterEnabled="true"
-        app:counterMaxLength="140"
+        app:counterMaxLength="280"
         app:counterOverflowTextAppearance="@style/counterOverride"
         app:counterTextAppearance="@style/counterText"
         tools:layout_editor_absoluteX="0dp"
@@ -20,12 +20,14 @@
 
         <EditText
             android:id="@+id/etCompose"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:gravity="center|center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="top"
+            android:hint="What's on your mind?"
             tools:layout_editor_absoluteX="55dp"
-            tools:layout_editor_absoluteY="109dp"
-            android:hint="What's on your mind?" />
+            tools:layout_editor_absoluteY="109dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
