Began ProgressIndicator implementation (issue: it continues to load) and changed the color of the ActionBar

--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -7,4 +7,13 @@
         android:visible="true"
         app:showAsAction="ifRoom" />
 
+    <!--    Progress Indicator when loading/refreshing -->
+    <item
+        android:id="@+id/miActionProgress"
+        android:title="Loading..."
+        android:visible="false"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        app:actionLayout="@layout/activity_timeline" />
+
 </menu>
