--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -32,4 +32,11 @@
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="2dp"
         android:text="@string/logout" />
+
+<!--    Progress Indicator when loading/refreshing -->
+    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbProgressAction" />
 </RelativeLayout>
