--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
+        <item name="colorPrimary">#1DA1F2</item>
+        <item name="colorPrimaryDark">#1880C1</item>
+        <item name="colorAccent">#1DA1F2</item>
     </style>
 
     <!-- Application theme. -->
