--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
@@ -66,4 +66,16 @@
         android:layout_toEndOf="@+id/ivProfileImage"
         android:textStyle="bold"
         tools:text="Stephon Ricks" />
+
+    <Button
+        android:id="@+id/btnReply"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivMedia"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="false"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="3dp"
+        android:text="Reply" />
 </RelativeLayout>
