--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/miCompose"
-        android:icon="@android:drawable/ic_menu_edit"
-        android:title="Compose"
-        android:visible="true"
-        app:showAsAction="ifRoom" />
+<!--    <item-->
+<!--        android:id="@+id/miCompose"-->
+<!--        android:icon="@android:drawable/ic_menu_edit"-->
+<!--        android:title="Compose"-->
+<!--        android:visible="true"-->
+<!--        app:showAsAction="ifRoom" />-->
 
     <!--    Progress Indicator when loading/refreshing -->
     <item
