Made URL links in Tweets live - Autolinking URLS

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -34,7 +34,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/ivProfileImage"
-        tools:text="This is my first tweet!" />
+        tools:text="This is my first tweet!"
+        android:autoLink="all"/>
 
     <TextView
         android:id="@+id/tvTimestamp"
