--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -48,11 +48,12 @@
 
     <ImageView
         android:id="@+id/ivMedia"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvBody"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
@@ -69,7 +70,7 @@
         tools:text="Stephon Ricks" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivComments"
         android:layout_width="23dp"
         android:layout_height="23dp"
         android:layout_below="@+id/ivMedia"
@@ -80,38 +81,79 @@
         app:srcCompat="@drawable/speech_icon_4" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/ivRetweets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivMedia"
         android:layout_alignParentBottom="false"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="69dp"
         android:layout_marginTop="5dp"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/ivComments"
         app:srcCompat="@drawable/ic_vector_retweet_stroke" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/ivFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivMedia"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="false"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="69dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="0dp"
-        android:layout_toEndOf="@+id/imageView2"
+        android:layout_toEndOf="@+id/ivRetweets"
         app:srcCompat="@drawable/ic_vector_heart_stroke" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/ivShare"
         android:layout_width="23dp"
         android:layout_height="23dp"
         android:layout_below="@+id/ivMedia"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="false"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="5dp"
-        android:layout_toEndOf="@+id/imageView3"
+        android:layout_toEndOf="@+id/ivFavorites"
         app:srcCompat="@drawable/share_icon_2" />
+
+    <TextView
+        android:id="@+id/tvReplies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivMedia"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="7dp"
+        android:layout_toEndOf="@+id/ivComments"
+        android:textColor="@color/light_gray"
+        android:textSize="14sp"
+        tools:text="23" />
+
+    <TextView
+        android:id="@+id/tvRetweets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivMedia"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="7dp"
+        android:layout_toEndOf="@+id/ivRetweets"
+        android:textColor="@color/light_gray"
+        android:textSize="14sp"
+        tools:text="10" />
+
+    <TextView
+        android:id="@+id/tvFavorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivMedia"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="false"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="14dp"
+        android:layout_toEndOf="@+id/ivFavorites"
+        android:textColor="@color/light_gray"
+        android:textSize="14sp"
+        tools:text="34" />
 </RelativeLayout>
