--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -44,28 +44,28 @@
         android:text="Tweet"
         android:textColor="#FFFFFF" />
 
-    <TextView
-        android:id="@+id/tvReplyTo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:text="Replying to"
-        android:textSize="18sp" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvReplyTo"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:text="Replying to"-->
+<!--        android:textSize="18sp" />-->
 
-    <TextView
-        android:id="@+id/tvReplyToUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="false"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/tvReplyTo"
-        android:text="TextView"
-        android:textSize="18sp" />
-    app:layout_constraintTop_toBottomOf="@+id/etCompose"
-        tools:layout_editor_absoluteX="269dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvReplyToUser"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="false"-->
+<!--        android:layout_marginStart="3dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:layout_marginBottom="0dp"-->
+<!--        android:layout_toEndOf="@+id/tvReplyTo"-->
+<!--        android:text="TextView"-->
+<!--        android:textSize="18sp" />-->
+<!--    app:layout_constraintTop_toBottomOf="@+id/etCompose"-->
+<!--        tools:layout_editor_absoluteX="269dp" />-->
 </RelativeLayout>
