--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -94,7 +94,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentStart="false"
             android:layout_alignParentTop="true"
             android:background="#FFFFFF"
             android:minHeight="?attr/actionBarSize">
@@ -103,7 +103,7 @@
                 android:id="@+id/ivLogo"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_gravity="center"
+                android:layout_gravity="center|center_horizontal"
                 android:layout_marginTop="0dp"
                 android:layout_marginEnd="0dp"
                 app:srcCompat="@drawable/twitter_blue_logo" />
@@ -122,7 +122,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentEnd="true"
-                android:layout_gravity="end|center_vertical"
+                android:layout_gravity="right|end"
                 android:layout_marginEnd="15dp"
                 app:srcCompat="@drawable/logout_icon" />
         </androidx.appcompat.widget.Toolbar>
